jss-compiler/tests/semantic_errors/invalid_method_call.jss
class Ponto {
    int x;
    Ponto constructor(int x) {
        this.x = x;
    }
}
function void main() {
    let Ponto p = new Ponto(10);
    p.soma();
}
